force-app/main/default/objects/License_Certification__c/License_Certification__c.object-meta.xml
<CustomObject>
    <label>License/Certification</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License/Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>