force-app/main/default/objects/License_Certification__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>License/Certifications</relationshipLabel>
    <relationshipName>License_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>