force-app/main/default/objects/License_Certification__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>Expiry_Date</label>
    <type>Date</type>
</CustomField>