force-app/main/default/objects/License_Certification__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue_Date</label>
    <type>Date</type>
</CustomField>