force-app/main/default/objects/License_Certification__c/fields/Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuing Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>