force-app/main/default/objects/License_Certification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    ISBLANK(Expiry_Date__c),
    &quot;Active&quot;,
    IF(
        TODAY() &gt; Expiry_Date__c,
        &quot;Expired&quot;,
        IF(
            AND(
                Expiry_Date__c - TODAY() &lt;= 30,
                Expiry_Date__c &gt;= TODAY()
            ),
            &quot;Expiring Soon&quot;,
            IF(
                AND(
                    NOT(ISBLANK(Issue_Date__c)),
                    TODAY() &lt; Issue_Date__c
                ),
                &quot;Not Yet Active&quot;,
                &quot;Active&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>