force-app/main/default/objects/License_Certification__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verification Status</label>
    <type>Checkbox</type>
</CustomField>